          carping (thanks, Karen Etheridge!)
        - ./tmp is now pruned by PruneCruft (thanks, Karent Etheridge!)
        - authordeps now picks up :version for the root section (thanks,
          Karen!)
        - the config loading of the "perl" config loader is more reliable, but
          still please don't use it (thanks, Karen!)

6.008     2016-10-05 21:35:23-04:00 America/New_York
        - fix the skip message from ExtraTests (thanks, Roy Ivy Ⅲ!)
        - cope with error changes in latest Moose (thanks, Karen Etheridge and
          Dave Rolsky)
        - always stringify $] in MetaConfig to avoid losing trailing zeroes
          through numification (thanks, Karen Etheridge!)

6.007     2016-08-06 14:04:39-04:00 America/New_York
        - restrict [MetaYAML] to metaspec v1.4, [MetaJSON] to v2.0+, as other
          version combinations are not well-supported by the toolchain

6.006     2016-07-04 10:56:36-04:00 America/New_York
        - add some documentation to Dist::Zilla::App::Tester (thanks, Alberto
          Simões!)
        - optimizations to regex munging (thanks, Olivier Mengué!)
        - add x_serialization_backend to META.* files (thanks, Karen
          Etheridge!)
        - metadata plugins are called before metadata defaults are built
          (thanks, Karen Etheridge!)
        - don't use ExtraTests plugin, but if you do, its generated test files
          are a bit faster when unused

6.005     2016-05-23 08:08:15-04:00 America/New_York
        - NextRelease now dies if there's no changelog file found
          (thanks, Karen Etheridge)
        - Module::Runtime replaces Class::Load (thanks Olivier Mengué)

6.004     2016-05-14 09:14:19-04:00 America/New_York (TRIAL RELEASE)
        - stop listing Path::Class as a prereq (thanks, Karen Etheridge)
        - update docs on path types (thanks, Graham Ollis)

6.003     2016-04-24 19:23:46+01:00 Europe/London (TRIAL RELEASE)
        - leading BOM (FEFF) is stripped on UTF-8 content